small fix on collapse

--- a/inst/css/materialize-body.css
+++ b/inst/css/materialize-body.css
@@ -28,3 +28,8 @@
   max-width: none !important;
    width: 95% !important;;
 }
+
+.action {
+  border-top: 1px solid rgba(160,160,160,.2);
+  padding-top: 16px;
+}
